# jikan-rust

./: .gitignore  Cargo.toml
.github/workflows/: rust.yml
examples/: bebop.rs  by_id.rs  enumerate.rs
src/: lib.rs  models.rs  request.rs
